--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# DO NOT Auto detect text files and perform LF normalization
+* text=false
 
 # Custom for Visual Studio
 *.cs     diff=csharp
